# hello_djinni

./: README.md  helloworld.djinni  run_djinni.bat  run_djinni.sh
android_project/HelloWorld/app/: CMakeLists.txt  build.gradle
android_project/HelloWorld/app/src/main/: AndroidManifest.xml
android_project/HelloWorld/app/src/main/cpp/: native-lib.cpp
android_project/HelloWorld/app/src/main/java/com/mycompany/helloworld/: ApiWrapping.java  MainActivity.java
android_project/HelloWorld/app/src/main/res/layout/: activity_main.xml
android_project/HelloWorld/gradle/wrapper/: gradle-wrapper.properties
generated-src/cpp/: hello_world.hpp
generated-src/java/com/mycompany/helloworld/: HelloWorld.java
generated-src/jni/: NativeHelloWorld.cpp
generated-src/objc/: HWHelloWorld+Private.mm  HWHelloWorld.h
src/cpp/: hello_world_impl.cpp  hello_world_impl.hpp
